--- a/project_server/step_by_step/users/templates/users/login.html
+++ b/project_server/step_by_step/users/templates/users/login.html
@@ -42,7 +42,7 @@
                                 </div>
                                 <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
                                     <a class="small" href="#">Забыли пароль?</a>
-                                    <input class="btn btn-primary" type="submit" value="Авторизоваться">
+                                    <input name='submit' class="btn btn-primary" type="submit" value="Авторизоваться">
                                 </div>
                                 <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
                                     <a href="#">
